force-app/main/default/objects/SEG_Fotosdefacturacion__c/SEG_Fotosdefacturacion__c.object-meta.xml
<CustomObject>
    <label>Fotos de facturación</label>
    <nameField>
        <displayFormat>FF-{00000000}</displayFormat>
        <label>ID Fotos de facturación</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fotos de facturación</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>