force-app/main/default/objects/SEG_Fotosdefacturacion__c/fields/Centro__c.field-meta.xml
<CustomField>
    <fullName>Centro__c</fullName>
    <formula>SEG_NumeroSR__r.SEG_Numero_centro__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Centro</label>
    <type>Text</type>
</CustomField>