force-app/main/default/objects/SEG_Fotosdefacturacion__c/fields/SEG_Actualizar__c.field-meta.xml
<CustomField>
    <fullName>SEG_Actualizar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actualizar</label>
    <type>Checkbox</type>
</CustomField>