force-app/main/default/objects/SEG_Fotosdefacturacion__c/fields/SEG_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>SEG_Descripcion__c</fullName>
    <formula>SEG_IDServicio__r.SEG_Descripcion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descripción</label>
    <type>Text</type>
</CustomField>