force-app/main/default/objects/SEG_Fotosdefacturacion__c/fields/SEG_Detalle__c.field-meta.xml
<CustomField>
    <fullName>SEG_Detalle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Detalle</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_MCC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Detalle</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>Fotos de facturación (Detalle)</relationshipLabel>
    <relationshipName>Fotos_de_facturaci_n3</relationshipName>
    <type>Lookup</type>
</CustomField>