force-app/main/default/objects/SEG_Fotosdefacturacion__c/fields/SEG_Estado__c.field-meta.xml
<CustomField>
    <fullName>SEG_Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vigente</fullName>
            </value>
            <value>
                <fullName>A determinar</fullName>
            </value>
            <value>
                <fullName>Revisar</fullName>
            </value>
            <value>
                <fullName>Ignorar</fullName>
            </value>
            <value>
                <fullName>Cerrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>