force-app/main/default/objects/SEG_Fotosdefacturacion__c/fields/SEG_GrupoCSO__c.field-meta.xml
<CustomField>
    <fullName>SEG_GrupoCSO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo CSO</label>
    <referenceTo>SEG_GruposCSO__c</referenceTo>
    <relationshipLabel>Fotos de facturación</relationshipLabel>
    <relationshipName>Fotos_de_facturaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>