force-app/main/default/objects/SEG_Fotosdefacturacion__c/fields/SEG_IDServicio__c.field-meta.xml
<CustomField>
    <fullName>SEG_IDServicio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ID Servicio</label>
    <referenceTo>SEG_ServiciosCSO__c</referenceTo>
    <relationshipLabel>Fotos de facturación</relationshipLabel>
    <relationshipName>Fotos_de_facturaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>