force-app/main/default/objects/SEG_Fotosdefacturacion__c/fields/SEG_NumerooperacionesCSO__c.field-meta.xml
<CustomField>
    <fullName>SEG_NumerooperacionesCSO__c</fullName>
    <label>Número operaciones CSO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>