force-app/main/default/objects/SEG_Fotosdefacturacion__c/fields/SEG_NumeroSR__c.field-meta.xml
<CustomField>
    <fullName>SEG_NumeroSR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Número Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Fotos de facturación</relationshipLabel>
    <relationshipName>Fotos_de_facturaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>