force-app/main/default/objects/SEG_Fotosdefacturacion__c/fields/SEG_Tematica__c.field-meta.xml
<CustomField>
    <fullName>SEG_Tematica__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Temática</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_MCC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>A - Temática</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>Fotos de facturación</relationshipLabel>
    <relationshipName>Fotos_de_facturaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>