force-app/main/default/objects/SEG_Fotosdefacturacion__c/fields/SEG_TMO__c.field-meta.xml
<CustomField>
    <fullName>SEG_TMO__c</fullName>
    <formula>SEG_IDServicio__r.SEG_TMO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>