force-app/main/default/objects/SEG_Fotosdefacturacion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SEG_Usuariogenerador__c</columns>
    <columns>SEG_NumeroSR__c</columns>
    <columns>SEG_Estado__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SEG_IDServicio__c</columns>
    <columns>Centro__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>